force-app/main/default/objects/Addendum_Line_Item__c/Addendum_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Addendum Line Item</label>
    <nameField>
        <displayFormat>ALI-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addendum Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>