force-app/main/default/objects/Addendum_Line_Item__c/fields/Add_Providers__c.field-meta.xml
<CustomField>
    <fullName>Add_Providers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Providers</label>
    <type>Checkbox</type>
</CustomField>