force-app/main/default/objects/Addendum_Line_Item__c/fields/Add_PRT_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Add_PRT_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add PRT Licenses</label>
    <type>Checkbox</type>
</CustomField>