force-app/main/default/objects/Addendum_Line_Item__c/fields/Add_Voice__c.field-meta.xml
<CustomField>
    <fullName>Add_Voice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Voice</label>
    <type>Checkbox</type>
</CustomField>