force-app/main/default/objects/Addendum_Line_Item__c/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <label>Addendum</label>
    <referenceTo>Addendum__c</referenceTo>
    <relationshipLabel>Addendum Line Items</relationshipLabel>
    <relationshipName>Addendum_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>