force-app/main/default/objects/Addendum_Line_Item__c/fields/Any_Add_Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Any_Add_Product_Text__c</fullName>
    <label>Any Add Product Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>