force-app/main/default/objects/Addendum_Line_Item__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Addendum Line Items</relationshipLabel>
    <relationshipName>Addendum_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>