force-app/main/default/objects/Addendum_Line_Item__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <formula>TEXT( Asset__r.Product2.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>