force-app/main/default/objects/Addendum_Line_Item__c/fields/Cancel_at_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Cancel_at_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel at 12 Months</label>
    <type>Checkbox</type>
</CustomField>