force-app/main/default/objects/Addendum_Line_Item__c/fields/Change_MSF__c.field-meta.xml
<CustomField>
    <fullName>Change_MSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change MSF</label>
    <type>Checkbox</type>
</CustomField>