force-app/main/default/objects/Addendum_Line_Item__c/fields/Change_MSF_Text__c.field-meta.xml
<CustomField>
    <fullName>Change_MSF_Text__c</fullName>
    <label>Change MSF Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>