force-app/main/default/objects/Addendum_Line_Item__c/fields/Confidentiality_Clause_Text__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Clause_Text__c</fullName>
    <label>Confidentiality Clause Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>