force-app/main/default/objects/Addendum_Line_Item__c/fields/CoTerm_Change__c.field-meta.xml
<CustomField>
    <fullName>CoTerm_Change__c</fullName>
    <formula>IF( Current_Renewal_Date__c != New_Renewal_Date__c , &quot;CoTerm&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoTerm Change</label>
    <type>Text</type>
</CustomField>