force-app/main/default/objects/Addendum_Line_Item__c/fields/Current_Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Next_Invoice_Date__c</fullName>
    <formula>IF( ( ISBLANK( Asset__r.Current_Product_Subscription__c ) || 
Asset__r.Current_Product_Subscription__r.RecurSoft__Unit_Price__c = 0 ) ,
Asset__r.Next_Payment_Date__c ,
Asset__r.Current_Product_Subscription__r.Next_Payment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Next Invoice Date</label>
    <type>Date</type>
</CustomField>