force-app/main/default/objects/Addendum_Line_Item__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <formula>IF( ( ISBLANK( Asset__r.Current_Product_Subscription__c ) ||
Asset__r.Current_Product_Subscription__r.RecurSoft__Unit_Price__c = 0 ), 
 Asset__r.Price ,
Asset__r.Current_Product_Subscription__r.RecurSoft__Unit_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>