force-app/main/default/objects/Addendum_Line_Item__c/fields/Current_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Trial_End_Date__c</fullName>
    <formula>IF( ( ISBLANK( Asset__r.Current_Product_Subscription__c ) || 
Asset__r.Current_Product_Subscription__r.RecurSoft__Unit_Price__c = 0 ||
ISBLANK( Asset__r.Current_Product_Subscription__r.Trial_End_Date__c )) , 
 Asset__r.Trial_End_Date__c ,
Asset__r.Current_Product_Subscription__r.Trial_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Trial End Date</label>
    <type>Date</type>
</CustomField>