force-app/main/default/objects/Addendum_Line_Item__c/fields/Defer_Billing__c.field-meta.xml
<CustomField>
    <fullName>Defer_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defer Billing</label>
    <type>Checkbox</type>
</CustomField>