force-app/main/default/objects/Addendum_Line_Item__c/fields/Defer_Billing_Text__c.field-meta.xml
<CustomField>
    <fullName>Defer_Billing_Text__c</fullName>
    <description>Set via Apex</description>
    <label>Defer Billing Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>