force-app/main/default/objects/Addendum_Line_Item__c/fields/Deferred_Months__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Months__c</fullName>
    <label>Deferred Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>