force-app/main/default/objects/Addendum_Line_Item__c/fields/Dentrix_Data_Writeback__c.field-meta.xml
<CustomField>
    <fullName>Dentrix_Data_Writeback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dentrix Data Writeback</label>
    <type>Checkbox</type>
</CustomField>