force-app/main/default/objects/Addendum_Line_Item__c/fields/Dentrix_Writeback_Price__c.field-meta.xml
<CustomField>
    <fullName>Dentrix_Writeback_Price__c</fullName>
    <label>Dentrix Writeback Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>