force-app/main/default/objects/Addendum_Line_Item__c/fields/Duplicate_Block__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Block__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Block</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>