force-app/main/default/objects/Addendum_Line_Item__c/fields/Extend_Satisfaction_Period__c.field-meta.xml
<CustomField>
    <fullName>Extend_Satisfaction_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extend Satisfaction Period</label>
    <type>Checkbox</type>
</CustomField>