force-app/main/default/objects/Addendum_Line_Item__c/fields/Extend_Satisfaction_Period_Text__c.field-meta.xml
<CustomField>
    <fullName>Extend_Satisfaction_Period_Text__c</fullName>
    <label>Extend Satisfaction Period Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>