force-app/main/default/objects/Addendum_Line_Item__c/fields/Forgive_Past_Due_Extend_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Forgive_Past_Due_Extend_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forgive Past Due &amp; Extend Agreement</label>
    <type>Checkbox</type>
</CustomField>