force-app/main/default/objects/Addendum_Line_Item__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <label>Header Text</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>