force-app/main/default/objects/Addendum_Line_Item__c/fields/Intro_Language_Text__c.field-meta.xml
<CustomField>
    <fullName>Intro_Language_Text__c</fullName>
    <label>Intro Language Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>