force-app/main/default/objects/Addendum_Line_Item__c/fields/Last_Asset_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Asset_Update__c</fullName>
    <description>Updated to force recalculate of fields from an Asset update.</description>
    <label>Last Asset Update</label>
    <type>DateTime</type>
</CustomField>