force-app/main/default/objects/Addendum_Line_Item__c/fields/Monthly_to_Coterminous__c.field-meta.xml
<CustomField>
    <fullName>Monthly_to_Coterminous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly to Coterminous</label>
    <type>Checkbox</type>
</CustomField>