force-app/main/default/objects/Addendum_Line_Item__c/fields/Months_To_Add__c.field-meta.xml
<CustomField>
    <fullName>Months_To_Add__c</fullName>
    <formula>MAX(Deferred_Months__c, Waived_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months To Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>