force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>New Contract Start Date</label>
    <type>Date</type>
</CustomField>