force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Term_Months__c</fullName>
    <label>New Contract Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>