force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Free_Month_Setting__c.field-meta.xml
<CustomField>
    <fullName>New_Free_Month_Setting__c</fullName>
    <label>Free Month Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extend Contract - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period - At the Beginning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>