force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>New_Free_Months__c</fullName>
    <label>New Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>