force-app/main/default/objects/Addendum_Line_Item__c/fields/New_MSF__c.field-meta.xml
<CustomField>
    <fullName>New_MSF__c</fullName>
    <label>New MSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>