force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Next_Invoice_Date__c</fullName>
    <description>Set via Apex</description>
    <label>New Next Invoice Date</label>
    <type>Date</type>
</CustomField>