force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Subscription_Needed__c.field-meta.xml
<CustomField>
    <fullName>New_Subscription_Needed__c</fullName>
    <formula>IF( Current_Price__c = New_Price__c &amp;&amp; 
Current_Next_Invoice_Date__c = New_Next_Invoice_Date__c &amp;&amp; 
Current_Renewal_Date__c = New_Renewal_Date__c , 
&quot;&quot;, 
&quot;Needs New Subscription&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Subscription Needed</label>
    <type>Text</type>
</CustomField>