force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Trial_End_Date__c</fullName>
    <label>New Trial End Date</label>
    <type>Date</type>
</CustomField>