force-app/main/default/objects/Addendum_Line_Item__c/fields/New_Trial_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>New_Trial_Period_Days__c</fullName>
    <label>New Trial Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>