force-app/main/default/objects/Addendum_Line_Item__c/fields/NewTerm__c.field-meta.xml
<CustomField>
    <fullName>NewTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Term</label>
    <type>Checkbox</type>
</CustomField>