force-app/main/default/objects/Addendum_Line_Item__c/fields/NewTerm_Months__c.field-meta.xml
<CustomField>
    <fullName>NewTerm_Months__c</fullName>
    <label>New Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>