force-app/main/default/objects/Addendum_Line_Item__c/fields/NewTerm_Text__c.field-meta.xml
<CustomField>
    <fullName>NewTerm_Text__c</fullName>
    <label>New Term Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>