force-app/main/default/objects/Addendum_Line_Item__c/fields/Number_of_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Modifications__c</fullName>
    <formula>IF( Defer_Billing__c , 1 , 0 ) +
IF( Waive_Billing__c , 1 , 0 ) +
IF( NewTerm__c , 1 , 0 ) +
IF( Change_MSF__c , 1 , 0 ) +
IF( ISBLANK( Asset__c ) , 1 , 0 ) +
IF( Extend_Satisfaction_Period__c , 1 , 0 ) +
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Modifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>