force-app/main/default/objects/Addendum_Line_Item__c/fields/Number_of_PRT_Licenses_to_Add__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PRT_Licenses_to_Add__c</fullName>
    <label>Number of PRT Licenses to Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>