force-app/main/default/objects/Addendum_Line_Item__c/fields/Original_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Agreement_Date__c</fullName>
    <formula>Asset__r.Most_Recent_Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Agreement Date</label>
    <type>Date</type>
</CustomField>