force-app/main/default/objects/Addendum_Line_Item__c/fields/Outro_Language_Text__c.field-meta.xml
<CustomField>
    <fullName>Outro_Language_Text__c</fullName>
    <label>Outro Language Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>