force-app/main/default/objects/Addendum_Line_Item__c/fields/Price_for_Voice__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Voice__c</fullName>
    <label>Price for Voice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>