force-app/main/default/objects/Addendum_Line_Item__c/fields/Price_per_Provider__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Provider__c</fullName>
    <label>Price per Provider</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>