force-app/main/default/objects/Addendum_Line_Item__c/fields/Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_Id__c</fullName>
    <formula>Asset__r.Product2.Standard_Pricebook_Entry_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Entry Id</label>
    <type>Text</type>
</CustomField>