force-app/main/default/objects/Addendum_Line_Item__c/fields/PriceBookEntry_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_Contract_Name__c</fullName>
    <description>Contract Display Name for Add Product. Shows up on PDF for customer.  Set via Lightning component.</description>
    <label>PriceBookEntry Contract Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>