force-app/main/default/objects/Addendum_Line_Item__c/fields/PriceBookEntry_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_Name__c</fullName>
    <label>Product Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>