force-app/main/default/objects/Addendum_Line_Item__c/fields/PriceBookEntry_Price__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>