force-app/main/default/objects/Addendum_Line_Item__c/fields/PriceBookEntry_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_Product_Family__c</fullName>
    <description>Product Family for Add Product. Used to validate one product per family.  Set via Lightning component.</description>
    <label>PriceBookEntry Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>