force-app/main/default/objects/Addendum_Line_Item__c/fields/PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryId__c</fullName>
    <description>PricebookEntryId for Add Product dependent on Price Book selected on Addendum. Not able to do a lookup to PricebookEntry. Set via Lightning component.</description>
    <label>PriceBookEntryId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>