force-app/main/default/objects/Addendum_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF ( ISBLANK(Asset__c), PriceBookEntry_Contract_Name__c , Asset__r.Product2.Contract_Display_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>