force-app/main/default/objects/Addendum_Line_Item__c/fields/Promo_Item__c.field-meta.xml
<CustomField>
    <fullName>Promo_Item__c</fullName>
    <label>Promo Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple iPad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>