force-app/main/default/objects/Addendum_Line_Item__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>Asset__r.Provider__r.Related_Contact__r.FirstName &amp; &quot; &quot; &amp; Asset__r.Provider__r.Related_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>