force-app/main/default/objects/Addendum_Line_Item__c/fields/Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Provider_NPI__c</fullName>
    <formula>IF( ISBLANK( Asset__r.Provider__r.NPI__c ) ,
&quot;Not Available&quot; ,
Asset__r.Provider__r.NPI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider NPI</label>
    <type>Text</type>
</CustomField>