force-app/main/default/objects/Addendum_Line_Item__c/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>