force-app/main/default/objects/Addendum_Line_Item__c/fields/Waive_Billing__c.field-meta.xml
<CustomField>
    <fullName>Waive_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Billing</label>
    <type>Checkbox</type>
</CustomField>