force-app/main/default/objects/Addendum_Line_Item__c/fields/Waive_Billing_Text__c.field-meta.xml
<CustomField>
    <fullName>Waive_Billing_Text__c</fullName>
    <label>Waive Billing Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>