force-app/main/default/objects/Addendum_Line_Item__c/fields/Waive_Satisfaction_and_Send_Promo__c.field-meta.xml
<CustomField>
    <fullName>Waive_Satisfaction_and_Send_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Satisfaction and Send Promo</label>
    <type>Checkbox</type>
</CustomField>