force-app/main/default/objects/Addendum_Line_Item__c/fields/Waived_Months__c.field-meta.xml
<CustomField>
    <fullName>Waived_Months__c</fullName>
    <label>Waived Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>