force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/ANY.recordType-meta.xml
<RecordType>
    <fullName>ANY</fullName>
    <active>true</active>
    <label>ANY</label>
</RecordType>