force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/ANY_ADD.recordType-meta.xml
<RecordType>
    <fullName>ANY_ADD</fullName>
    <active>true</active>
    <label>ANY_ADD</label>
</RecordType>