force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/HG.recordType-meta.xml
<RecordType>
    <fullName>HG</fullName>
    <active>true</active>
    <label>HG</label>
</RecordType>