force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/SR.recordType-meta.xml
<RecordType>
    <fullName>SR</fullName>
    <active>true</active>
    <label>SR</label>
</RecordType>