force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/SRC.recordType-meta.xml
<RecordType>
    <fullName>SRC</fullName>
    <active>true</active>
    <label>SRC</label>
</RecordType>