force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/SRS.recordType-meta.xml
<RecordType>
    <fullName>SRS</fullName>
    <active>true</active>
    <label>SRS</label>
</RecordType>