force-app/main/default/objects/Addendum_Line_Item__c/recordTypes/SRSR.recordType-meta.xml
<RecordType>
    <fullName>SRSR</fullName>
    <active>true</active>
    <label>SRSR</label>
</RecordType>