force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Addendum_Is_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Addendum_Is_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Addendum__r.Status__c , &quot;Closed&quot; ) ||
ISPICKVAL( Addendum__r.Status__c , &quot;Signature Requested&quot; ) ||
ISPICKVAL( Addendum__r.Status__c , &quot;Signature Received&quot; )</errorConditionFormula>
    <errorMessage>This Addendum is locked for editing.</errorMessage>
</ValidationRule>