force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Complete_Change_MSF.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Change_MSF</fullName>
    <active>true</active>
    <errorConditionFormula>(Change_MSF__c = true &amp;&amp;
ISBLANK( New_MSF__c )) ||
(Change_MSF__c = false &amp;&amp;
NOT(ISBLANK( New_MSF__c )))</errorConditionFormula>
    <errorMessage>The Change MSF modification isn&#39;t complete.</errorMessage>
</ValidationRule>