force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Complete_Deferred.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Deferred</fullName>
    <active>true</active>
    <errorConditionFormula>(Defer_Billing__c = true &amp;&amp;
ISBLANK( Deferred_Months__c )) ||
(Defer_Billing__c = false &amp;&amp;
NOT(ISBLANK( Deferred_Months__c )))</errorConditionFormula>
    <errorMessage>The Defer Billing modification isn&#39;t complete.</errorMessage>
</ValidationRule>