force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Complete_NewTerm.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_NewTerm</fullName>
    <active>true</active>
    <errorConditionFormula>(NewTerm__c = true &amp;&amp;
ISBLANK( NewTerm_Months__c )) ||
(NewTerm__c = false &amp;&amp;
NOT(ISBLANK( NewTerm_Months__c )))</errorConditionFormula>
    <errorMessage>The New Term modification isn&#39;t complete.</errorMessage>
</ValidationRule>