force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Complete_Waived.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Waived</fullName>
    <active>true</active>
    <errorConditionFormula>(Waive_Billing__c = true &amp;&amp;
ISBLANK( Waived_Months__c )) ||
(Waive_Billing__c = false &amp;&amp;
NOT(ISBLANK( Waived_Months__c )))</errorConditionFormula>
    <errorMessage>The Waive Billing modification isn&#39;t complete.</errorMessage>
</ValidationRule>