force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Mix_Defer_Waive.validationRule-meta.xml
<ValidationRule>
    <fullName>Mix_Defer_Waive</fullName>
    <active>true</active>
    <errorConditionFormula>Waive_Billing__c = true &amp;&amp; 
(Defer_Billing__c = true &amp;&amp; Deferred_Months__c != 0)</errorConditionFormula>
    <errorMessage>Defer Billing and Waive Billing cannot be used together.</errorMessage>
</ValidationRule>