force-app/main/default/objects/Addendum_Line_Item__c/validationRules/Price_Change_Same_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Change_Same_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Price__c =  New_MSF__c</errorConditionFormula>
    <errorMessage>The new MSF is the same as the current MSF</errorMessage>
</ValidationRule>